--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
   "author": "Victoriaplum.com",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1"
+    "@babel/preset-react": "^7.14.5",
+    "axios": "^0.21.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
     "babel-loader": "^8.2.2",
     "cache-loader": "^4.1.0",
+    "css-loader": "^5.2.6",
     "dotenv": "^8.6.0",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^3.1.0",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
