--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^3.1.0",
     "sass": "^1.35.1",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
