--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@babel/preset-react": "^7.14.5",
+    "@reduxjs/toolkit": "^1.6.0",
     "axios": "^0.21.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -25,6 +29,7 @@
     "cache-loader": "^4.1.0",
     "css-loader": "^5.2.6",
     "dotenv": "^8.6.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^3.1.0",
     "sass": "^1.35.1",
