--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Plumify - Victoriplum.com Front-end Test",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack && webpack-dev-server --inline --hot --watch --open"
+    "dev": "webpack && webpack-dev-server --inline --hot --watch --open",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-range": "^1.8.9",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "uuid": "^8.3.2"
