--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-range": "^1.8.9",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
